2021.05.09/String_HW
>>> print('C:\some\name')
C:\some
ame
>>> print(r'C\some\name')
C\some\name
>>> peint("""\
... Usage : thingy [OPTIONS]
... -h
... -H hostname
... """)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'peint' is not defined
>>>  peint("""\
  File "<stdin>", line 1
    peint("""\
IndentationError: unexpected indent
>>> ... Usage : thingy [OPTIONS]
  File "<stdin>", line 1
    ... Usage : thingy [OPTIONS]
        ^
SyntaxError: invalid syntax
>>> ... -h
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'h' is not defined
>>> ... -H hostname
  File "<stdin>", line 1
    ... -H hostname
           ^
SyntaxError: invalid syntax
>>>  peint("""\
  File "<stdin>", line 1
    peint("""\
IndentationError: unexpected indent
>>> ... Usage : thingy [OPTIONS]
  File "<stdin>", line 1
    ... Usage : thingy [OPTIONS]
        ^
SyntaxError: invalid syntax
>>> ... -h
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'h' is not defined
>>> ... -H hostname
  File "<stdin>", line 1
    ... -H hostname
           ^
SyntaxError: invalid syntax
>>> print("""\
... Usage : things [OPTIONS]
... -h
... -
... -
... -H hostname
... """)
Usage : things [OPTIONS]
-h
-
-
-H hostname

>>> # 3 times 'un', followed by 'ium'
>>> 3 * 'un'
'ununun'
>>> 3 * 'un' + 'ium'
'unununium'
>>> 'Py' 'thon'
'Python'
>>> prefix = 'Py'
>>> prefix 'thon'
  File "<stdin>", line 1
    prefix 'thon'
           ^
SyntaxError: invalid syntax
>>> File "<stdin", line 1
  File "<stdin>", line 1
    File "<stdin", line 1
         ^
SyntaxError: invalid syntax
>>> prefix 'thon'
  File "<stdin>", line 1
    prefix 'thon'
           ^
SyntaxError: invalid syntax
>>> prefix +'thon'
'Python'
>>> word = 'Python'
>>> word[0]
'P'
>>> word[5]
'n'
>>> word[-1]
'n'
>>> word[-2]
'o'
>>> word[0:2]
'Py'
>>> word[3:5]
'ho'
>>> 'J' + word[1:]
'Jython'
>>> word[:4] + 'on'
'Python'
>>> s = 'hgvhvkhjdjkhjb'
>>> len(s)
1